<resources>
    <string name="app_name">BlackC4t</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="tab_text_home">Home</string>
    <string name="tab_text_otp">One Key</string>
    <string name="tab_text_2kotp">Two Key</string>
    <string name="tab_text_pke">Public</string>
    <string name="tab_text_password">Pwd Gen</string>

    <string name="shortcut_disabled">Shortcut Disabled</string>

    <string name="shortcut_otp_shortname">One Key</string>
    <string name="shortcut_otp_longname">One Time Pad</string>
    <string name="shortcut_home_shortname">Home</string>
    <string name="shortcut_home_longname">Home</string>
    <string name="shortcut_2kotp_shortname">Two Key</string>
    <string name="shortcut_2kotp_longname">Two Key One Time Pad</string>
    <string name="shortcut_password_shortname">Pwd Gen</string>
    <string name="shortcut_password_longname">Password Generator</string>
    <string name="shortcut_pke_shortname">Public</string>
    <string name="shortcut_pke_longname">Public Key Encryption</string>

    <string name="two_image_description">Image of Shibe</string>
    <string name="encrypt_key_hint">Key</string>
    <string name="encrypt_key1_hint">Key 1</string>
    <string name="encrypt_key2_hint">Key 2</string>
    <string name="encrypt_message_hint">Message</string>
    <string name="encrypt_toggle_button">Encrypt/ Decrypt</string>
    <string name="encrypt_toggle_button_off">Encrypt</string>
    <string name="encrypt_toggle_button_on">Decrypt</string>

    <string name="frag_output_text">Output</string>
    <string name="frag_run_text">🏃‍ Run</string>

    <string name="password_input1_hint">Number of Words</string>
    <string name="password_input2_hint">Number of Numbers</string>
    <string name="password_input3_hint">Number of Symbols</string>

    <string name="pke_mod_hint">Modulus</string>
    <string name="pke_public_hint">Public Key Exponent</string>
    <string name="pke_private_hint">Private Key Exponent</string>


    <string name="about_head">About</string>
    <string name="about_description">This app exists to provide a proof of concept for various encryption methods
        and password generators that are written in Javascript. </string>
    <string name="about_otp_head">One Time Pad</string>
    <string name="about_otp_description">BlackC4t One Time Pad (OTP) requires the use of a pre-shared key to encrypt
        plain text. OTP is a form of symmetric encryption (it is also proof of concept) and is therefore not recommended
        to be used as a primary form of encryption. </string>
    <string name="about_2kotp_head">Two Key One Time Pad (Shibe)</string>
    <string name="about_2kotp_description">Uses the One Time Pad encryption with 2 keys.</string>
    <string name="about_pke_head">Public Key Cryptography</string>
    <string name="about_pke_description">Uses a Modulus and Public Key to encrypt, and the Modulus and the Private
        Key to Decrypt Note that this is proof of concept. </string>
    <string name="about_password_head">Password Generator</string>
    <string name="about_password_description">A simple password generator that creates an easy to remember password from
        words, numbers and symbols. </string>

    <string name="settings_head">Settings</string>
    <string name="settings_description"></string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_radio1">Light</string>
    <string name="settings_theme_radio2">Dark</string>
    <string name="settings_theme_radio3">Black</string>
    <string name="settings_theme_button">💾 Save Theme</string>
    <string name="settings_text">Text Size</string>
    <string name="settings_text_radio1">Small</string>
    <string name="settings_text_radio2">Medium</string>
    <string name="settings_text_radio3">Large</string>
    <string name="settings_text_button">💾 Save Text Size</string>


</resources>
