<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/about_head"
            style="@style/heading_text_style" />

        <TextView
            android:text="@string/about_description"
            style="@style/body_text_style" />

        <TextView
            android:text="@string/about_otp_head"
            style="@style/heading_text_style" />

        <TextView
            android:text="@string/about_otp_description"
            style="@style/body_text_style" />

        <TextView
            android:text="@string/about_two_key_head"
            style="@style/heading_text_style" />

        <TextView
            android:text="@string/about_two_key_description"
            style="@style/body_text_style" />

        <TextView
            android:text="@string/about_pke_head"
            style="@style/heading_text_style" />

        <TextView
            android:text="@string/about_pke_description"
            style="@style/body_text_style" />

        <TextView
            android:text="@string/about_password_head"
            style="@style/heading_text_style" />

        <TextView
            android:text="@string/about_password_description"
            style="@style/body_text_style" />

    </LinearLayout>


</ScrollView>