<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/settings_head"
            android:id="@+id/textView"
            style="@style/heading_text_style"
            />
        <TextView
            android:text="@string/settings_description"
            android:id="@+id/textView2"
            style="@style/body_text_style"
        />
        <TextView
            android:text="@string/settings_theme"
            android:id="@+id/textView3"
            style="@style/heading_text_style"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <RadioButton
                android:text="@string/settings_theme_radio1"
                style="@style/radio_style"
                android:id="@+id/radioButton" android:layout_weight="1"/>
            <RadioButton
                android:text="@string/settings_theme_radio2"
                style="@style/radio_style"
                android:id="@+id/radioButton2" android:layout_weight="1"/>
            <RadioButton
                android:text="@string/settings_theme_radio3"
                style="@style/radio_style"
                android:id="@+id/radioButton3" android:layout_weight="1"/>
        </RadioGroup>
        <Button
            android:text="@string/settings_theme_button"
            android:id="@+id/button_theme"
            style="@style/button_style"
            />
        <TextView
            android:text="@string/settings_text"
            android:id="@+id/textView4"
            style="@style/heading_text_style"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <RadioButton
                android:text="@string/settings_text_radio1"
                style="@style/radio_style"
                android:id="@+id/radioButton4" android:layout_weight="1"/>
            <RadioButton
                android:text="@string/settings_text_radio2"
                style="@style/radio_style"
                android:id="@+id/radioButton5" android:layout_weight="1"/>
            <RadioButton
                android:text="@string/settings_text_radio3"
                style="@style/radio_style"
                android:id="@+id/radioButton6" android:layout_weight="1"/>
        </RadioGroup>
        <Button
            android:text="@string/settings_text_button"
            android:id="@+id/button_text"
            style="@style/button_style"
            />
    </LinearLayout>

</ScrollView>