<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
            android:shortcutId="otp"
            android:enabled="true"
            android:icon="@drawable/ic_otp2"
            android:shortcutShortLabel="@string/shortcut_otp_shortname"
            android:shortcutLongLabel="@string/shortcut_otp_longname"
            android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
                android:data="0"
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.fredhappyface.blackc4t"
                android:targetClass="com.fredhappyface.blackc4t.Main" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
            android:shortcutId="2kotp"
            android:enabled="true"
            android:icon="@drawable/ic_2kotpshibe"
            android:shortcutShortLabel="@string/shortcut_2kotp_shortname"
            android:shortcutLongLabel="@string/shortcut_2kotp_longname"
            android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
                android:data="1"
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.fredhappyface.blackc4t"
                android:targetClass="com.fredhappyface.blackc4t.Main" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
            android:shortcutId="pke"
            android:enabled="true"
            android:icon="@drawable/ic_public"
            android:shortcutShortLabel="@string/shortcut_pke_shortname"
            android:shortcutLongLabel="@string/shortcut_pke_longname"
            android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
                android:data="2"
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.fredhappyface.blackc4t"
                android:targetClass="com.fredhappyface.blackc4t.Main" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
            android:shortcutId="password"
            android:enabled="true"
            android:icon="@drawable/ic_password2"
            android:shortcutShortLabel="@string/shortcut_password_shortname"
            android:shortcutLongLabel="@string/shortcut_password_longname"
            android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
                android:data="3"
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.fredhappyface.blackc4t"
                android:targetClass="com.fredhappyface.blackc4t.Main" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>