<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:importantForAutofill="noExcludeDescendants"
            android:focusableInTouchMode="true">

            <EditText
                style="@style/code_text_style"
                android:inputType="text"
                android:id="@+id/otp_key"
                android:singleLine="false"
                android:hint="@string/encrypt_key_hint" />

            <EditText
                style="@style/code_text_style"
                android:inputType="textMultiLine"
                android:id="@+id/otp_message"
                android:hint="@string/encrypt_message_hint" />

            <ToggleButton
                android:text="@string/encrypt_toggle_button"
                android:id="@+id/otp_decrypt"
                android:textOff="@string/encrypt_toggle_button_off"
                android:textOn="@string/encrypt_toggle_button_on"
                style="@style/button_style" />

            <TextView
                android:text="@string/frag_output_text"
                android:textIsSelectable="true"
                android:id="@+id/otp_output"
                style="@style/code_text_style"
                android:background="@drawable/output" />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:orientation="horizontal"
        style="@style/bottom_button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/linearLayout">

        <Button
            android:text="@string/frag_run_text"
            android:background="@drawable/button"
            style="@style/button_style"
            android:onClick="runOTP" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>