<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_marginEnd="@dimen/activity_horizontal_margin"
                      android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginTop="@dimen/activity_vertical_margin"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        android:focusable="true"
                      android:importantForAutofill="noExcludeDescendants"
        android:focusableInTouchMode="true">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textbox"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/pke_message"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" android:hint="@string/encrypt_message_hint" android:layout_marginTop="8dp"/>
            <ToggleButton
                    android:text="@string/encrypt_toggle_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:minHeight="10dp"
                    android:id="@+id/pke_decrypt" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textOff="@string/encrypt_toggle_button_off" android:textOn="@string/encrypt_toggle_button_on" android:layout_marginTop="8dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textbox"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/pke_modulus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:singleLine="false" android:hint="@string/pke_mod_hint" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textbox"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/pke_publickey"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:singleLine="false" android:hint="@string/pke_public_hint" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textbox"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/pke_privatekey"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:singleLine="false" android:hint="@string/pke_private_hint" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:text="@string/frag_output_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/output"
                    android:id="@+id/pke_output" android:layout_marginTop="8dp"
                    android:textIsSelectable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginTop="@dimen/activity_vertical_margin"

            android:layout_width="0dp"
            android:layout_height="40dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout"
    >
        <Button
                android:text="@string/frag_run_text"
                android:background="@drawable/button"
                android:minHeight="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/button4" android:layout_weight="1"
                android:onClick="runPKE"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>